# opencode-ui

./: .dockerignore  .env.example  .gitignore  CLI_README.md  Dockerfile  Dockerfile.backend  README.md  check_db_tables.py  cli.py  docker-compose.yml  project_structure.txt  pyproject.toml  requirements.txt  test_admin_login.py
.github/: copilot-instructions.md
app/: agent-controller.py  main.py
app/backend/: __init__.py  apis.py  routes.py  utils.py
app/core/: config.py  database.py  docker_ops.py  github_oauth.py  models.py  opencode_client.py  schemas.py  session_cleanup_worker.py  session_config.py  session_management.py  session_ops.py  workspace_service.py
config/: requirements.txt
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: AGENT_SESSION_IMPLEMENTATION_SUMMARY.md  FEATURES.md  QUICK_START.md  plan.md  project_structure.txt
scripts/: check_db.py  check_schema.py  check_session_container.py  check_tables.py  check_users.py  cli_tester.py  create_sessions_table.py  create_test_user.py  idle_watcher.py  init_db.py  init_db_host.py  migrate_db.py  session_utils.py  stop_all_sessions.py  test_agent.py  test_backend_chat.py  test_db_query.py  test_docker.py  test_e2e_chat_routing.py  test_integration.py  test_opencode_api.py  test_persistence_deep.py  test_quick_persistence.py  test_session_api.py  test_session_cleanup.py  test_user.py  test_workspace_files.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: App.vue  style.css
ui/src/components/: ChatInput.vue  ChatWindow.vue  EmptyState.vue  (+12 more)
(+10 files in other folders)
