[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-cli"
version = "0.1.0"
description = "CLI tool for interacting with OpenCode API"
authors = [
    {name = "OpenCode Team", email = "team@opencode.ai"}
]
dependencies = [
    "opencode-ai==0.1.0",
    "pydantic==2.5.0"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]